# pike

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MILESTONE.md  README.md  SECURITY.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude-plugin/: marketplace.json
.claude/rules/: frontend.md  rust.md  testing.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: MILESTONE.md  pike-codex-delegation-fix-windows-sandbox.md  pike-codex-delegation-implementation.md  plan-claude-delegation.md
docs/manual/: README.md  editor-and-preview.md  getting-started.md  git.md  global-mode.md  panels.md  projects-and-windows.md  settings.md  shortcuts-and-cli.md  terminal-and-agents.md
e2e/: README.md  tsconfig.json  wdio.conf.ts
e2e/specs/: agent.ts  editor.ts  invoke-mock.ts  layout.ts  locale-ja.ts  media.ts  navigation.ts  panels.ts  preview.ts  screenshots.ts  smoke.ts  terminal.ts
e2e/support/: pdfFixture.ts  prepare.ts
plugins/: README.md
plugins/.claude-plugin/: marketplace.json
plugins/codex/pike-todo/: SKILL.md
plugins/pike-todo/.claude-plugin/: plugin.json
scripts/: download-rg.sh  frame-screenshot.sh  sync-manual-images.sh
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.e2e.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/capabilities-runtime/: wdio.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi
src-tauri/src/: cli.rs  drop_paths.rs  elevate.rs  font.rs  ime_debug.rs  lib.rs  main.rs  settings_sync.rs  tasks.rs  todo_cli.rs  types.rs  wait.rs
src-tauri/src/agent/: acp_runtime.rs  codex_runtime.rs  commands.rs  mod.rs  state.rs  types.rs
src-tauri/src/claude_usage/: mod.rs  rate.rs
src-tauri/src/codex/: approval.rs  auth.rs  mod.rs  runtime.rs  session.rs
src-tauri/src/codex/protocol/: client.rs  items.rs  messages.rs  mod.rs
src-tauri/src/codex_usage/: mod.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/docker/: mod.rs  tunnel.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/jumplist/: mod.rs
src-tauri/src/project/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/watcher/: mod.rs
src/assets/: theme.css
src/components/: ColorDot.vue  ConfirmDialog.vue  HelpButton.vue  KeyboardShortcuts.vue  ProjectSwitcher.vue  QuickOpen.vue
src/components/agent/: AgentApprovalDialog.vue
src/components/codex/: ApprovalDialog.vue
src/components/layout/: SideBar.vue  StatusBar.vue  TabPane.vue
src/components/panels/: ColorSelect.vue  DiagnosticsPanel.vue  DockerPanel.vue  FileTreePanel.vue  GitPanel.vue  GroupComboBox.vue  OutlinePanel.vue  ProjectListItem.vue  ProjectPanel.vue  SearchPanel.vue  TasksPanel.vue  TodoPanel.vue
src/components/panels/outline/: OutlineHistoryView.vue  OutlineTreeView.vue
src/components/tabs/: AgentChatTab.vue  CodexChatTab.vue  DiffTab.vue  DockerLogsTab.vue  EditorTab.vue  HistoryTab.vue  ManualTab.vue  PdfTab.vue  PreviewTab.vue  SettingsTab.vue  TerminalTab.vue
src/composables/: useAgentRouter.ts  useCliOpen.ts  useCodexRouter.ts  useConfirmDialog.ts  useDockerLogRouter.ts  useDragAndDrop.ts  useEditorInfo.ts  useFsWatcher.ts  useImagePaste.ts  useKeyboardShortcuts.ts  useOutlineSource.ts  usePtyRouter.ts  useShortcutsModal.ts  useTerminalInject.ts  useTerminalNotifications.ts  useUpdater.ts
src/i18n/: en.ts  index.ts  ja.ts
src/lib/: codexHistory.ts  diffParser.ts  diffSearch.ts  dropPaths.ts  editorConflict.ts  editorDiagnostics.ts  editorGitGutter.ts  editorJumpTo.ts  editorMinimap.ts  editorSearch.ts  editorThemes.ts  fileIcons.ts  fontDetection.ts  format.ts  gitGraph.ts  gitRemote.ts  imeDebugLog.ts  imeFocusPark.ts  languages.ts  manual.ts  mermaid.ts  notify.ts  paths.ts  projectColors.ts  projectPaths.ts  shellIcons.ts  slug.ts  storage.ts  tauri.ts  terminalLinks.ts  window.ts
src/lib/jumpTo/: findInFile.ts  index.ts  parseImports.ts  resolveImport.ts  vueComponent.ts
src/lib/outline/: index.ts  types.ts
src/lib/outline/extractors/: _util.ts  css.ts  dockerfile.ts  go.ts  html.ts  json.ts  kotlin.ts  makefile.ts  markdown.ts  perl.ts  php.ts  python.ts  ruby.ts  rust.ts  swift.ts  toml.ts  typescript.ts  vue.ts  yaml.ts
src/stores/: agent.ts  claudeRate.ts  claudeUsage.ts  codex.ts  codexUsage.ts  diagnostics.ts  docker.ts  fileTree.ts  git.ts  project.ts  search.ts  settings.ts  sidebar.ts  statusMessage.ts  tabs.ts  tasks.ts  todo.ts  usageStore.ts  worktree.ts
src/types/: agent.ts  claudeUsage.ts  codex.ts  codexUsage.ts  diagnostics.ts  docker.ts  git.ts  project.ts  search.ts  tab.ts  tasks.ts  todo.ts
