[package]
name = "pike"
version = "0.2.2"
description = "Lightweight AI-coding-focused development environment"
authors = ["Kan Fushihara <kan.fushihara@gmail.com>"]
license = "MIT"
repository = "https://github.com/kan/pike"
edition = "2021"
rust-version = "1.77.2"
default-run = "pike"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
bollard = "0.20"
futures-util = "0.3"
base64 = "0.22.1"
encoding_rs = "0.8.35"
serde_yaml = "0.9.34"
tauri-plugin-window-state = "2.4.1"
font-kit = "0.14.3"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
notify = "7"
tauri-plugin-notification = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_Foundation"] }

[[bin]]
name = "pike"
path = "src/main.rs"

[[bin]]
name = "verify_pty"
path = "src/bin/verify_pty.rs"

[[bin]]
name = "verify_tmux"
path = "src/bin/verify_tmux.rs"

[[bin]]
name = "verify_bollard"
path = "src/bin/verify_bollard.rs"
