[package]
name = "pike"
version = "0.27.0"
description = "Lightweight AI-coding-focused development environment"
authors = ["Kan Fushihara <kan.fushihara@gmail.com>"]
license = "MIT"
repository = "https://github.com/kan/pike"
edition = "2021"
rust-version = "1.77.2"
default-run = "pike"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# E2E スクリーンショット自動化 (issue #142)。既定 OFF。`tauri build --features e2e`
# のときだけ wdio WebDriver プラグインと dynamic-acl を有効化する。cfg(debug_assertions)
# の target 依存はプロファイルを追従せず release にも混入するため、feature で制御する。
e2e = ["dep:tauri-plugin-wdio-webdriver", "tauri/dynamic-acl"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
bollard = "0.21"
futures-util = "0.3"
base64 = "0.22.1"
encoding_rs = "0.8.35"
serde_yaml = "0.9.34"
toml = "1.0"
tauri-plugin-window-state = "2.4.1"
font-kit = "0.14.3"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
notify = "8"
percent-encoding = "2"
tauri-plugin-notification = "2"
async-trait = "0.1"
# E2E 撮影 (issue #142)。`e2e` feature でのみ有効。本番ビルドには含まれない。
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    # jumplist: PROPVARIANT の手組み (VT_LPWSTR) と Variant 定数
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    # jumplist: IObjectArray/IObjectCollection・AppendCategory/AddUserTasks は
    # Common、PKEY 用 IPropertyStore は PropertiesSystem
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
# drop_paths.rs の WebMessageReceived ブリッジ用。wry が同版を使っており
# 新規の依存ツリー追加ではない（Cargo.lock に既存）。webview2-com の COM 型は
# windows-core 0.61 系（本体の windows 0.62 とは別インスタンス）なので、
# Interface trait / PWSTR はこちらの windows-core を合わせて使う。
webview2-com = "0.38"
windows-core = "0.61"
# 背景透過（issue #162）: アクリル / Mica のすりガラス効果を実行時に適用/解除する。
window-vibrancy = "0.8"

[[bin]]
name = "pike"
path = "src/main.rs"

[[bin]]
name = "verify_pty"
path = "src/bin/verify_pty.rs"

[[bin]]
name = "verify_tmux"
path = "src/bin/verify_tmux.rs"

[[bin]]
name = "verify_bollard"
path = "src/bin/verify_bollard.rs"
